# PersonalLMS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PACKAGE_MANIFEST.md  README.md  pyproject.toml
docs/build-week/: BUILD_WEEK_SCOPE.md  CODEX_BUILD_LOG.md  DEMO_SCRIPT.md  EVALUATION_REPORT.md  EXECUTION_PLAN.md  FAILURE_MODE_MATRIX.md  FINAL_CHECKLIST.md  JUDGE_GUIDE.md  JUDGING_ALIGNMENT.md  RELEASE_NOTES.md  RUN_STATE.md  SUBMISSION_COPY.md  SUBMISSION_SUMMARY.md  VALIDATION_LOG.md
docs/decisions/: ADR-0001_CREWAI_FLOWS_AND_CREWS.md  ADR-0002_PROVIDER_NEUTRAL_AGENT_IDENTITIES.md  ADR-0003_OBSIDIAN_DURABLE_KNOWLEDGE.md  ADR-0004_RAG_AS_THE_KNOWLEDGE_PLANE.md
docs/exec-plans/active/: 2026-07-16_PERSONAL_LMS_MULTI_AGENT_MASTER_PLAN.md
docs/handoffs/: 2026-07-16_CLAUDE_NIGHT_RUN.md  2026-07-16_PERSONAL_LMS_NIGHT_CLOSEOUT.md  QWEN_WORK_QUEUE.md
docs/inbox/qwen/: README.md
docs/operations/: SHARED_WORKSPACE_SETUP.md
docs/product-specs/: AGENT_ROSTER_AND_CONTRACTS.md  MODEL_ROUTER_AND_COST_CONTROLS.md  OBSIDIAN_SOURCE_ARCHITECTURE.md  OLLAMA_LOCAL_PROVIDER.md  RAG_KNOWLEDGE_PLANE.md  SOURCE_PROMOTION_AND_EXTRACTION_QUEUE.md
fixtures/build_week/: source_readiness_manifest.json
src/personal_lms/: __main__.py  build_week_demo.py  cli.py  composition.py  config.py  mastery.py  source_readiness.py
src/personal_lms/catalog/: __init__.py  protocol.py  sqlite.py
src/personal_lms/content/: __init__.py  errors.py  protocol.py  sqlite.py
src/personal_lms/domain/: __init__.py  agents.py  approvals.py  base.py  budgets.py  catalog.py  citations.py  content.py  enums.py  extraction.py  knowledge_scope.py  librarian.py  models.py  obsidian.py  privacy.py  promotion.py  reconstruction.py  routing.py  runs.py  source_inventory.py  source_verification.py  tutor.py  vault.py
src/personal_lms/extraction/: __init__.py  errors.py  fake.py  protocol.py  sqlite.py
src/personal_lms/flows/: __init__.py  personal_assistant.py
src/personal_lms/librarian/: __init__.py  content_grounding.py  grounding.py
src/personal_lms/policies/: __init__.py  errors.py  router.py
src/personal_lms/promotion/: __init__.py  eligibility.py  errors.py  protocol.py  service.py  sqlite.py
src/personal_lms/providers/: __init__.py  errors.py  fake.py  openai_responses.py  protocol.py  registry.py
src/personal_lms/source_inventory/: __init__.py  errors.py  protocol.py  sqlite.py
src/personal_lms/source_verification/: __init__.py  errors.py  (+3 more)
tests/unit/: test_build_week.py  test_cli.py  test_cli_ask.py  test_composition.py  test_config.py
(+83 files in other folders)
